@@ -191,7 +191,9 @@ static int			working_mem = 0;
 static int			local_working_mem = 0;
 static int			output_indent_level = 0;
 static int			last_segment = 0;
+#ifdef COBC_HAS_CUTOFF_FLAG	/* CHECKME: likely will be removed completely in 3.1 */
 static int			gen_if_level = 0;
+#endif
 static int			gen_init_working = 0;
 static int			need_plus_sign = 0;
 static int			odo_stop_now = 0;
@@ -6760,7 +6762,9 @@ output_stmt (cb_tree x)
 			}
 			output_newline ();
 		}
+#ifdef COBC_HAS_CUTOFF_FLAG	/* CHECKME: likely will be removed completely in 3.1 */
 		gen_if_level++;
+#endif
 		code = 0;
 		output_prefix ();
 		if (ip->test == cb_false
@@ -6779,19 +6783,23 @@ output_stmt (cb_tree x)
 			} else {
 				output_line ("; /* Nothing */");
 			}
+#ifdef COBC_HAS_CUTOFF_FLAG	/* CHECKME: likely will be removed completely in 3.1 */
 			if (gen_if_level > cb_if_cutoff) {
 				if (ip->stmt2) {
 					code = cb_id++;
 					output_line ("goto l_%d;", code);
 				}
 			}
+#endif
 			output_indent_level -= 2;
 			output_line ("}");
 		}
+#ifdef COBC_HAS_CUTOFF_FLAG	/* CHECKME: likely will be removed completely in 3.1 */
 		if (ip->stmt2) {
 			if (gen_if_level <= cb_if_cutoff) {
-				if (!skip_else)
+				if (!skip_else) {
 					output_line ("else");
+				}
 				output_line ("{");
 				output_indent_level += 2;
 			}
@@ -6809,6 +6817,23 @@ output_stmt (cb_tree x)
 			}
 		}
 		gen_if_level--;
+#else /* ifdef COBC_HAS_CUTOFF_FLAG */
+		if (ip->stmt2) {
+			if (!skip_else) {
+				output_line ("else");
+			}
+			output_line ("{");
+			output_indent_level += 2;
+			if (ip->is_if) {
+				output_line ("/* ELSE */");
+			} else {
+				output_line ("/* WHEN */");
+			}
+			output_stmt (ip->stmt2);
+			output_indent_level -= 2;
+			output_line ("}");
+		}
+#endif
 		break;
 	case CB_TAG_PERFORM:
 		output_perform (CB_PERFORM (x));
@@ -9531,7 +9556,9 @@ codegen (struct cb_program *prog, const int subsequent_call)
 	gen_custom = 0;
 	gen_nested_tab = 0;
 	gen_dynamic = 0;
+#ifdef COBC_HAS_CUTOFF_FLAG	/* CHECKME: likely will be removed completely in 3.1 */
 	gen_if_level = 0;
+#endif
 	local_mem = 0;
 	local_working_mem = 0;
 	need_save_exception = 0;
