@@ -9,6 +9,9 @@
 	  generated because of dialect option value "warning"
 	* cobc.c: default cb_flag_computed_goto depending on COB_COMPUTED_GOTO
 	  instead of a fixed list of compiler (version) defines
+	* flag.def, cobc.c, codegen.c: disabled -fif-cutoff (cb_if_cutoff,
+	  gen_if_level), can be re-activated by -DCOBC_HAS_CUTOFF_FLAG (likely
+	  to be removed completely later)
 
 2017-11-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
